// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messageHtmlToComponent latex 1`] = `
Array [
  <p>
    This is some latex!
  </p>,
  "
",
  <LatexBlock
    content="x^2 + y^2 = z^2
"
  />,
  <LatexBlock
    content="F_m - 2 = F_0 F_1 \\\\dots F_{m-1}
"
  />,
  <p>
    That was some latex!
  </p>,
]
`;

exports[`messageHtmlToComponent link with enabled a tooltip plugin 1`] = `
<p>
  lorem ipsum 
  <a
    className="theme markdown__link"
    href="http://www.dolor.com"
    rel="noreferrer"
    target="_blank"
  >
    <LinkTooltip
      href="http://www.dolor.com"
      title="www.dolor.com"
    />
  </a>
   sit amet
</p>
`;

exports[`messageHtmlToComponent link without enabled tooltip plugins 1`] = `
<p>
  lorem ipsum 
  <a
    className="theme markdown__link"
    href="http://www.dolor.com"
    rel="noreferrer"
    target="_blank"
  >
    www.dolor.com
  </a>
   sit amet
</p>
`;

exports[`messageHtmlToComponent plain text 1`] = `
<p>
  Hello, world!
</p>
`;
